--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,7 +70,7 @@ main {
     flex-direction: column;
     width: 40%;
     margin: 0 auto;
-    margin-top: 150px;
+    margin-top: 130px;
     align-items: center;
 }
 
@@ -113,12 +113,26 @@ main {
 #search-area{
     display: flex;
     flex-direction: column;
+    align-items: center;
 
 }
 
 .search-items {
     margin-top: 25px;
+     /* border: 1px solid red; */
 }
+
+#search-bar {
+    height: 40px;
+    width: 60vw;
+    border-radius: 25px;
+    border: 1px solid #dfe1e5;  
+}
+
+#search-bar:hover {
+    box-shadow:  0 1px 6px rgba(32,33,36,.28);
+}
+
 a {
     text-decoration: none;
 }
