Add search button styling and adjust element spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ main {
     flex-direction: column;
     width: 40%;
     margin: 0 auto;
-    margin-top: 125px;
+    margin-top: 200px;
     align-items: center;
 }
 
@@ -120,18 +120,34 @@ main {
 }
 
 .search-items {
-    margin-top: 25px;
+    margin-top: 50px;
 }
 
 #search-bar {
     height: 40px;
     width: 550px;
     border-radius: 25px;
+    margin-top: 20px;
     border: 1px solid #dfe1e5;  
 }
 
 #search-bar:hover {
     box-shadow:  0 1px 6px rgba(32,33,36,.28);
+}
+
+.lower-button {
+    background-color: #f8f9fa;
+    border: none;
+    padding: 8px 18px;
+    border-radius: 6px;
+    font-weight: 100;
+}
+
+.lower-button:hover{
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
 }
 
 a {
