--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,8 @@ nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
+   /* border: 1px solid red; */
+
 }
 
 main {
@@ -86,9 +88,14 @@ main {
 }
     
 #grid-button {
-    height: 20px;
-    width: 20px;
-    
+    height: 18px;
+    width: 18px;
+    padding: 8px;
+}
+
+#grid-button:hover {
+   background-color: rgba(60,64,67,0.08);
+   border-radius: 50%; 
 }
 
 #sign-in:hover {
@@ -169,7 +176,6 @@ a:hover {
 }
 
 footer{
-    /* border: 1px solid red; */
     margin-top: 280px;
     padding: 25px 20px 20px;
     display: flex;
