--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,11 +135,16 @@ main {
     width: 550px;
     border-radius: 25px;
     margin-top: 20px;
-    border: 1px solid #dfe1e5;  
+    border: 1px solid #dfe1e5;
+    text-indent: 8%;
+    font-size: 16px;  
 }
 
 #search-bar:hover {
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
+}
+#search-bar:focus {
+    outline: none;
 }
 
 .lower-button {
