--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,7 +127,7 @@ main {
 }
 
 .search-items {
-    margin-top: 30px;
+    margin-top: 45px;
 }
 
 #search-bar {
@@ -150,7 +150,7 @@ main {
 .lower-button {
     background-color: #f8f9fa;
     border: none;
-    padding: 8px 18px;
+    padding: 10px 18px;
     border-radius: 6px;
     font-weight: 100;
     border: 1px solid transparent;
@@ -161,6 +161,12 @@ main {
     background-color: #f8f9fa;
     border: 1px solid #dadce0;
     color: #202124;
+    text-decoration: none;
+}
+
+.lower-button:visited {
+    color: #222;
+ 
 }
 
 a {
