--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,6 +165,10 @@ main {
     text-decoration: none;
 }
 
+.lower-button:link {
+    color: #222; 
+}
+
 .lower-button:visited {
     color: #222;
  
