--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,6 +148,21 @@ main {
     outline: none;
 }
 
+#search-field {
+    position: relative;
+    padding: 0;
+    margin: 0;
+}
+
+#search-icon {
+    position: absolute;
+    bottom: 12px;
+    left:10px;
+    width:20px;
+    height:20px;
+}
+
+
 .lower-button {
     background-color: #f8f9fa;
     border: none;
